--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="de.bunk.github_graphql_android">
+    package="de.bunk.view">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name="de.bunk.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="de.bunk.view.list.RepositoryListActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
