--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.3.20'
+    ext.rxkotlin_version = "2.2.0"
+    ext.graphql_version = "1.0.0-alpha5"
     repositories {
         google()
         jcenter()
@@ -9,6 +11,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "com.apollographql.apollo:apollo-gradle-plugin:$graphql_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
