--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,7 +13,12 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
+        debug {
+            buildConfigField "String", "GITHUB_API_KEY", "\"" + System.getenv("GITHUB_API_KEY") + "\""
+        }
+
         release {
+            buildConfigField "String", "GITHUB_API_KEY", "\"" + System.getenv("GITHUB_API_KEY") + "\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
