--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 28
@@ -26,6 +27,7 @@ android {
 }
 
 final koin_version = "1.0.2"
+final glide_version = "4.8.0"
 
 dependencies {
     compile project(path: ':domain')
@@ -46,6 +48,10 @@ dependencies {
 
     // RxKotlin
     implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
+
+    // Glide
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    kapt "com.github.bumptech.glide:compiler:$glide_version"
 
     // Testing
     testImplementation 'junit:junit:4.12'
